syntax = "proto3";

package leveler;

import "requirement.proto";
import "constraint.proto";
import "role.proto";
import "util.proto";
import "google/protobuf/empty.proto";

service HostEndpoint {
    rpc GetHost (HostId) returns (Host) {}
    rpc ListHosts (Query) returns (HostList) {}
    rpc CreateHost (Host) returns (HostId) {}
    rpc UpdateHost (Host) returns (Host) {}
    rpc DeleteHost (HostId) returns (google.protobuf.Empty) {}
}

message HostId {
    string Id = 1;
}

message Host {
    string Id = 1;
    string Name = 2;
    string Description = 3;
    repeated Constraint Constraints = 4;
    repeated Role Roles = 5;
    repeated Requirement Requirements = 6;
}

message HostList {
    repeated Host Results = 1;
}

