syntax = "proto3";

package leveler;

import "action.proto";
import "constraint.proto";
import "util.proto";
import "google/protobuf/empty.proto";

service RequirementEndpoint {
    rpc GetRequirement (RequirementId) returns (Requirement) {}
    rpc ListRequirements (Query) returns (RequirementList) {}
    rpc CreateRequirement (Requirement) returns (RequirementId) {}
    rpc UpdateRequirement (Requirement) returns (Requirement) {}
    rpc DeleteRequirement (RequirementId) returns (google.protobuf.Empty) {}
}

message RequirementId {
    string Id = 1;
}

message Requirement {
    string Id = 1;
    string Name = 2;
    string Description = 3;
    repeated Action Actions = 4;
    repeated Action Tests = 5;
    repeated Constraint Constraints = 6;
    map<string, string> Environment = 7;
}

message RequirementList {
    repeated Requirement Results = 1;
}

