syntax = "proto3";

package leveler;

import "requirement.proto";
import "util.proto";
import "google/protobuf/empty.proto";

service RoleEndpoint {
	rpc GetRole (RoleId) returns (Role) {}
    rpc ListRoles (Query) returns (RoleList) {}
    rpc CreateRole (Role) returns (RoleId) {}
    rpc UpdateRole (Role) returns (Role) {}
    rpc DeleteRole (RoleId) returns (google.protobuf.Empty) {}
}

message RoleId {
	string Id = 1;
}

message Role {
	string Id = 1;
	string Name = 2;
	string Description = 3; 
	repeated Requirement Requirements = 4;
}

message RoleList {
	repeated Role Results = 1;
}